# kavacoast

./: .gitignore  BotConfig_sample.json  Cargo.toml  README.md  build.sh
bot/: Cargo.toml  Roles.json
bot/src/: main.rs
bot/src/cmds/: debug.rs  ping.rs
daily/: Cargo.toml
daily/src/: main.rs
discord-webhook/: Cargo.toml
discord-webhook/src/: main.rs
discord_log/: Cargo.toml
discord_log/src/: lib.rs
generic/: Cargo.toml
generic/src/: lib.rs
https-redirect/: Cargo.toml  Rocket.toml
https-redirect/src/: main.rs
kava_mysql/: Cargo.toml
kava_mysql/src/: lib.rs
pubdata/: Cargo.toml
pubdata/src/: lib.rs
rest-api/: Cargo.toml  Rocket.toml
rest-api/src/: main.rs
rest-api/static/: index.html
rest-api/static/join/: index.html
schedule/: Cargo.toml
schedule/src/: lib.rs
schedule_notify/: Cargo.toml
schedule_notify/src/: lib.rs
sh/: build-release.sh  build.sh
src/: dbrecord.rs  error.rs  generic.rs  kavabot.rs  main.rs  test_init.rs  web.rs
src/cmds/: mod.rs  ping.rs  register.rs  resetpassword.rs
src/models/: mod.rs  pool_game.rs  pool_player.rs  registration.rs  session.rs  user.rs
src/routes/: check_registration_key.rs  mod.rs  pool_game.rs  pool_player.rs  token.rs  users.rs
src/routes/pages/: admin.rs  dashboard.rs  mod.rs  pool.rs  pool_host.rs  settings.rs
static/: index.html  style.css
static/dashboard/: admin.html  admin.js  dashboard.js  error.html  index.html  loading.html  pool.html  pool.js  pool_host.html  pool_host.js  settings.html  settings.js  style.css
static/login/: index.html  login.js  style.css
static/register/: index.html  register.js
static/resources/css/: Roboto.css  main.css
static/resources/js/: auth.js  background.js  copy.js  request.js
static/resources/json/: PublicData_sample.json
surreal_interface/: Cargo.toml
tls/: .keep
web/: Cargo.toml  Rocket.toml
web/src/: main.rs  schedule.rs
web/static/: index.html  main.css  main.js  style.css
web/static/dashboard/: dashboard.js  index.html  style.css
web/static/login/: index.html  login.js  style.css
web/static/resources/css/: main.css
web/static/resources/js/: copy.js  fadein.js  request.js
weekly/: Cargo.toml
weekly/src/: main.rs
