[package]
name = "kavacoast"
version = "2.0.0-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache", "http", "framework", "standard_framework"], version = "0.12.0"}
serde = "1.0.195"
serde_json = "1.0.111"
chrono = "0.4.31"
surrealdb = "1.1.1"
confy = "0.6.0"
password-hash = "0.5.0"
argon2 = "0.5.2"
async-trait = "0.1.77"
rocket = { version = "0.5.0", features = ["tls", "json"] } # merged features
rand = "0.8.5"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "9.2.0"
env_logger = "0.11.0"
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["json"] }
