[package]
name = "kavacoast"
version = "2.0.0-alpha.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache", "http", "framework", "standard_framework"], version = "0.12.1"}
serde = "1.0.202"
serde_json = "1.0.117"
chrono = "0.4.38"
surrealdb = "1.5.0"
confy = "0.6.1"
password-hash = "0.5.0"
argon2 = "0.5.3"
async-trait = "0.1.80"
rocket = { version = "0.5.0", features = ["tls", "json"] }
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
jsonwebtoken = "9.3.0"
env_logger = "0.11.3"
log = "0.4.21"
reqwest = { version = "0.12.4", features = ["json"] }
either = { version = "1.12.0", features = ["serde"] }