[package]
name = "kavacoast"
version = "2.0.0-alpha.0"
authors = ["Jason <jason@elg.gg>"]
edition = "2021"
repository = "https://github.com/Elgenzay/kavacoast"
license = "MIT-0"

[dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache", "http", "framework", "standard_framework"], version = "0.12.2"}
serde = "1.0.203"
serde_json = "1.0.120"
chrono = "0.4.38"
surrealdb = "1.5.3"
confy = "0.6.1"
password-hash = "0.5.0"
argon2 = "0.5.3"
async-trait = "0.1.80"
rocket = { version = "0.5.1", features = ["tls", "json"] }
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
jsonwebtoken = "9.3.0"
env_logger = "0.11.3"
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["json"] }
either = { version = "1.13.0", features = ["serde"] }
strum = { version = "0.26.3", features = ["derive"] }
