[package]
name = "kavabot"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache", "http", "framework", "standard_framework"], version = "0.11.5"}
serde = "1.0.164"
serde_json = "1.0.99"
dotenvy = "0.15.7"
chrono = "0.4.26"
surreal_interface = { path = "../surreal_interface" }
