[package]
name = "daily"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
schedule = { path = "../schedule" }
discord_log = { path = "../discord_log" }
kava_mysql = { path = "../kava_mysql" }
pubdata = { path = "../pubdata" }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.91"
mysql = "23.0.0"
