[package]
name = "https-redirect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2" }
dotenvy = "0.15.6"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["serve"]
