[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
mysql = "23.0.0"
rocket = { version = "0.5.0-rc.2", features = ["tls"] }

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["serve"]
