[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
mysql = "23.0.0"
rocket = { version = "0.5.0-rc.2", features = ["tls", "json"] }
password-hash = "0.4.2"
argon2 = "0.4.1"
pbkdf2 = "0.11.0"
scrypt = "0.10.0"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["serve"]
