[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "23.0.0"
dotenvy = "0.15.6"
rocket = { version = "0.5.0-rc.2", features = ["tls", "json"] }
password-hash = "0.4.2"
argon2 = "0.4.1"
rand_core = { version = "0.6", features = ["std"] }
pbkdf2 = "0.11.0"
scrypt = "0.10.0"
schedule = { path = "../schedule" }
kava_mysql = { path = "../kava_mysql" }

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["serve"]
