[package]
name = "web"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master", features = ["tls", "json"] }
password-hash = "0.5.0"
argon2 = "0.5.0"
rand_core = { version = "0.6", features = ["std"] }
pbkdf2 = "0.12.1"
scrypt = "0.11.0"
