[package]
name = "weekly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.91"
mysql = "23.0.0"
schedule = { path = "../schedule" }
discord_log = { path = "../discord_log" }
